--- a/src/views/tasks/readAll.handlebars
+++ b/src/views/tasks/readAll.handlebars
@@ -15,7 +15,7 @@
               <input type="hidden" name="id" value="{{ id }}">
               <button type="submit" class="list-link"><i class="bi bi-x-lg"></i></button>
             </form>
-            <a href="/task/edit" class="bi bi-pencil-square list-link"></a>
+            <a href="/task/update/{{ id }}" class="bi bi-pencil-square list-link"></a>
           </div>
         </li>
       {{/each}}
